--- a/index.html
+++ b/index.html
@@ -3,9 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>CV Edoardo Di Martino</title>
 </head>
 <body>
-    hello world
+    <header class="container">
+        <div class="container">
+            <img class="img_logo" src="https://as2.ftcdn.net/v2/jpg/03/21/65/93/1000_F_321659381_SBb1zhD0a4ISqbNoVAn80KpJDUtmG8HY.jpg" alt="">
+            <h1>Edoardo Di Martino</h1>
+        </div>
+    </header>
+    <main class="container">
+        <h2>Experience</h2>
+        <div class="container-main">
+            <div class="item">
+                <h3>Experience</h3>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                    Velit impedit ducimus aspernatur amet eos quis dicta at, 
+                    doloribus recusandae nostrum tempora incidunt, expedita fugiat, 
+                    omnis deleniti accusamus eligendi quisquam nihil.
+                </p>
+            </div>
+    
+            <div class="item">
+                <h3>Experience</h3>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                    Velit impedit ducimus aspernatur amet eos quis dicta at, 
+                    doloribus recusandae nostrum tempora incidunt, expedita fugiat, 
+                    omnis deleniti accusamus eligendi quisquam nihil.
+                </p>
+            </div>
+    
+            <div class="item">
+                <h3>Experience</h3>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                    Velit impedit ducimus aspernatur amet eos quis dicta at, 
+                    doloribus recusandae nostrum tempora incidunt, expedita fugiat, 
+                    omnis deleniti accusamus eligendi quisquam nihil.
+                </p>
+            </div>
+        </div>
+    </main>
+    <footer class="container">
+        <p>Curriculum by &hearts; boolean</p>
+    </footer>
 </body>
 </html>
