fine esercizio mancano le rifiniture

--- a/index.html
+++ b/index.html
@@ -4,51 +4,78 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>CV Edoardo Di Martino</title>
+    <title>Document</title>
 </head>
 <body>
-    <header class="container">
-        <div class="container">
-            <img class="img_logo" src="https://as2.ftcdn.net/v2/jpg/03/21/65/93/1000_F_321659381_SBb1zhD0a4ISqbNoVAn80KpJDUtmG8HY.jpg" alt="">
-            <h1>Edoardo Di Martino</h1>
-        </div>
+    <header>
+        <img class="header_logo" src="https://d92mrp7hetgfk.cloudfront.net/images/sites/misc/Boolean/original.png?1623187562" alt=""> 
+        <h1 class="titolo">Toboolist</h1>
     </header>
-    <main class="container">
-        <h2>Experience</h2>
-        <div class="container-main">
-            <div class="item">
-                <h3>Experience</h3>
-                <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                    Velit impedit ducimus aspernatur amet eos quis dicta at, 
-                    doloribus recusandae nostrum tempora incidunt, expedita fugiat, 
-                    omnis deleniti accusamus eligendi quisquam nihil.
-                </p>
+    <main>
+        <div class="container ">
+            <div class="btn_container">
+                <button class="btn btn_task">Add Task</button>
+                <button class="btn btn_section">Add Section</button>
             </div>
-    
-            <div class="item">
-                <h3>Experience</h3>
-                <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                    Velit impedit ducimus aspernatur amet eos quis dicta at, 
-                    doloribus recusandae nostrum tempora incidunt, expedita fugiat, 
-                    omnis deleniti accusamus eligendi quisquam nihil.
-                </p>
+        </div>
+        <div class="container mt1">
+            <div class="task-container">
+                <h4><span>&#9662;</span> New Task</h4>
+                <div class="check">
+                    <div class="check-container check-green"><span>&#10003;</span></div>
+                    <p>Prima task</p>
+                    <div class="btn-category">Editorial</div>
+                </div>
             </div>
-    
-            <div class="item">
-                <h3>Experience</h3>
-                <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                    Velit impedit ducimus aspernatur amet eos quis dicta at, 
-                    doloribus recusandae nostrum tempora incidunt, expedita fugiat, 
-                    omnis deleniti accusamus eligendi quisquam nihil.
-                </p>
+            <div class="task-container">
+                <h4><span>&#9662;</span> Today</h4>
+                <div class="check">
+                    <div class="check-container check-green"><span>&#10003;</span></div>
+                    <p>Prima task</p>
+                    <div class="btn-category">Editorial</div>
+                </div>
+                <div class="check">
+                    <div class="check-container check-green"><span>&#10003;</span></div>
+                    <p>Prima task</p>
+                    <div class="btn-category">Editorial</div>
+                </div>
+                <div class="check">
+                    <div class="check-container check-red"><span>&#935;</span></div>
+                    <p>Prima task</p>
+                    <div class="btn-category">Editorial</div>
+                </div>
+                <div class="check">
+                    <div class="check-container check-green"><span>&#10003;</span></div>
+                    <p>Prima task</p>
+                    <div class="btn-category">Editorial</div>
+                </div>
+            </div>
+            <div class="task-container">
+                <h4><span>&#9662;</span> Upcoming</h4>
+                <div class="check">
+                    <div class="check-container check-red"><span>&#935;</span></div>
+                    <p>Prima task</p>
+                    <div class="btn-category">Editorial</div>
+                </div>
+                <div class="check">
+                    <div class="check-container check-green"><span>&#10003;</span></div>
+                    <p>Prima task</p>
+                    <div class="btn-category">Editorial</div>
+                </div>
+                <div class="check">
+                    <div class="check-container check-green"><span>&#10003;</span></div>
+                    <p>Prima task</p>
+                    <div class="btn-category">Editorial</div>
+                </div>
+                <div class="check">
+                    <div class="check-container check-green"><span>&#10003;</span></div>
+                    <p>Prima task</p>
+                    <div class="btn-category">Editorial</div>
+                </div>
             </div>
         </div>
     </main>
-    <footer class="container">
-        <p>Curriculum by &hearts; boolean</p>
+    <footer>
     </footer>
 </body>
 </html>
