--- a/index.html
+++ b/index.html
@@ -3,79 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <img class="header_logo" src="https://d92mrp7hetgfk.cloudfront.net/images/sites/misc/Boolean/original.png?1623187562" alt=""> 
-        <h1 class="titolo">Toboolist</h1>
-    </header>
-    <main>
-        <div class="container ">
-            <div class="btn_container">
-                <button class="btn btn_task">Add Task</button>
-                <button class="btn btn_section">Add Section</button>
-            </div>
+    <div class="container-1">
+    </div>
+    <div class="container-2 es-2 red">
+        <div class="container-small container-2-left green"></div>
+        <div class="container-small container-2-right-bottom blue"></div>
+    </div>
+    <div class="container-big es-3 red">
+        <div class="container-medium container-3-top-left blue"></div>
+        <div class="container-medium container-3-right-top blue"></div>
+        <div class="container-medium container-3-right-bottom relative blue">
+            <div class="container-medium absolute green"></div>
         </div>
-        <div class="container mt1">
-            <div class="task-container">
-                <h4><span>&#9662;</span> New Task</h4>
-                <div class="check">
-                    <div class="check-container check-green"><span>&#10003;</span></div>
-                    <p>Prima task</p>
-                    <div class="btn-category">Editorial</div>
-                </div>
-            </div>
-            <div class="task-container">
-                <h4><span>&#9662;</span> Today</h4>
-                <div class="check">
-                    <div class="check-container check-green"><span>&#10003;</span></div>
-                    <p>Prima task</p>
-                    <div class="btn-category">Editorial</div>
-                </div>
-                <div class="check">
-                    <div class="check-container check-green"><span>&#10003;</span></div>
-                    <p>Prima task</p>
-                    <div class="btn-category">Editorial</div>
-                </div>
-                <div class="check">
-                    <div class="check-container check-red"><span>&#935;</span></div>
-                    <p>Prima task</p>
-                    <div class="btn-category">Editorial</div>
-                </div>
-                <div class="check">
-                    <div class="check-container check-green"><span>&#10003;</span></div>
-                    <p>Prima task</p>
-                    <div class="btn-category">Editorial</div>
-                </div>
-            </div>
-            <div class="task-container">
-                <h4><span>&#9662;</span> Upcoming</h4>
-                <div class="check">
-                    <div class="check-container check-red"><span>&#935;</span></div>
-                    <p>Prima task</p>
-                    <div class="btn-category">Editorial</div>
-                </div>
-                <div class="check">
-                    <div class="check-container check-green"><span>&#10003;</span></div>
-                    <p>Prima task</p>
-                    <div class="btn-category">Editorial</div>
-                </div>
-                <div class="check">
-                    <div class="check-container check-green"><span>&#10003;</span></div>
-                    <p>Prima task</p>
-                    <div class="btn-category">Editorial</div>
-                </div>
-                <div class="check">
-                    <div class="check-container check-green"><span>&#10003;</span></div>
-                    <p>Prima task</p>
-                    <div class="btn-category">Editorial</div>
-                </div>
-            </div>
+    </div>
+    <div class="container-extra-big es-4 green">
+        <div class="container-big blue relative">
+            <div class="container-medium absolute container-3-top-left red"></div>
+            <div class="container-medium absolute container-3-right-bottom red"></div>
         </div>
-    </main>
-    <footer>
-    </footer>
-</body>
+        <div class="container-big blue relative">
+            <div class="container-medium red"></div>
+            <div class="container-medium relative red"></div>
+        </div>
+    </div>
+    </body>
 </html>
